--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="myFirstApp" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
 </head>
 <body>
-    <h1>sumit patil u r live is changes now</h1>
+    <div class="container"  ng-controller="LunchCheckController">
+        <h1>Lunch Checker</h1>
+   
+            <div class="form-group">
+                <input id="lunch-menu" type="text" ng-model="items"
+                placeholder="list comma separated dishes you usually have for lunch"
+                class="form-control">
+            </div>
+            <div class="form-group">
+                <button ng-click="message()" class="btn btn-default">Check If Too Much</button>
+            </div>
+            <div class="form-group message">
+              <!-- Your message can go here. -->
+              {{any}}
+            </div>
+      </div>
 </body>
 </html>
